Modificacion Parametros Gastos

--- a/WebContent/listaactivos.xhtml
+++ b/WebContent/listaactivos.xhtml
@@ -99,8 +99,8 @@
 														<p:menuitem value="Detalles" update="form:popup" icon="ui-icon-folder-open" actionListener="#{GestorActivos.cargarDetalles}" url="detallesactivo.xhtml"/>
 														<p:menuitem value="Comunidad" update="form:popup" icon="ui-icon-home" actionListener="#{GestorActivos.cargarComunidad}" url="movimientoscomunidades.xhtml"/>
 														<p:menuitem value="Cuotas" update="form:popup" icon="ui-icon-calculator" actionListener="#{GestorActivos.cargarCuota}" url="movimientoscuotas.xhtml"/>
-														<p:menuitem value="Referencia Catastral" update="form:popup" icon="ui-icon-script" actionListener="#{GestorActivos.cargarReferencia}" url="index.xhtml"/>
-														<p:menuitem value="Impuestos y Recursos" update="form:popup" icon="ui-icon-note" actionListener="#{GestorActivos.cargarImpuestos}" url="index.xhtml"/>
+														<p:menuitem value="Referencia Catastral" update="form:popup" icon="ui-icon-script" actionListener="#{GestorActivos.cargarReferencia}" url="movimientosreferencias.xhtml"/>
+														<p:menuitem value="Impuestos y Recursos" update="form:popup" icon="ui-icon-note" actionListener="#{GestorActivos.cargarImpuestos}" url="movimientosimpuestos.xhtml"/>
 														<p:menuitem value="Gastos" update="form:popup" icon="ui-icon-cart" actionListener="#{GestorActivos.cargarGastos}" url="gastos.xhtml"/>
 														
 													</p:contextMenu>  
