--- a/WebContent/detallesgasto.xhtml
+++ b/WebContent/detallesgasto.xhtml
@@ -19,10 +19,10 @@
 
 
 											<h:outputText value="IDPROV: " />
-											<p:inputText id="IDPROV" value="#{GestorDetallesActivo.sIDPROV}" disabled="true" />
+											<p:inputText id="IDPROV" value="#{GestorDatosGenerales.sIDPROV}" disabled="true" />
 
 											<h:outputText value="COENGP: " />
-											<p:inputText id="COENGP" value="#{GestorDetallesActivo.sCOENGP}" disabled="true" />
+											<p:inputText id="COENGP" value="#{GestorDatosGenerales.sCOENGP}" disabled="true" />
 
 										</h:panelGrid>
 									</p:panel>
@@ -44,183 +44,183 @@
 
 					<p:panel id="panel">
 						<h:panelGrid columns="1" cellpadding="5">
-									<p:fieldset legend="Activo #{GestorDetallesActivo.sCOACES}">
+									<p:fieldset legend="Activo #{GestorDetallesGasto.sCOACES}">
 										<h:panelGrid columns="1" cellpadding="5">
 
 											<h:outputText for="COACES" value="COACES: " />
-												<p:inputText id="COACES" value="#{GestorDetallesActivo.sCOACES}" size="18" maxlength="18"  disabled="true">
+												<p:inputText id="COACES" value="#{GestorDetallesGasto.sCOACES}" size="18" maxlength="18"  disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COGRUG" value="COGRUG: " />
-												<p:inputText id="COGRUG" value="#{GestorDetallesActivo.sCOGRUG}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COGRUG" value="#{GestorDetallesGasto.sCOGRUG}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COTPGA" value="COACES: " />
-												<p:inputText id="COTPGA" value="#{GestorDetallesActivo.sCOTPGA}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COTPGA" value="#{GestorDetallesGasto.sCOTPGA}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COSBGA" value="COSBGA: " />
-												<p:inputText id="COSBGA" value="#{GestorDetallesActivo.sCOSBGA}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COSBGA" value="#{GestorDetallesGasto.sCOSBGA}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="PTPAGO" value="PTPAGO: " />
-												<p:inputText id="PTPAGO" value="#{GestorDetallesActivo.sPTPAGO}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="PTPAGO" value="#{GestorDetallesGasto.sPTPAGO}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEDEVE" value="FEDEVE: " />
-												<p:inputText id="FEDEVE" value="#{GestorDetallesActivo.sFEDEVE}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEDEVE" value="#{GestorDetallesGasto.sFEDEVE}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FFGTVP" value="FFGTVP: " />
-												<p:inputText id="FFGTVP" value="#{GestorDetallesActivo.sFFGTVP}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FFGTVP" value="#{GestorDetallesGasto.sFFGTVP}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEPAGA" value="FEPAGA: " />
-												<p:inputText id="FEPAGA" value="#{GestorDetallesActivo.sFEPAGA}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEPAGA" value="#{GestorDetallesGasto.sFEPAGA}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FELIPG" value="FELIPG: " />
-												<p:inputText id="FELIPG" value="#{GestorDetallesActivo.sFELIPG}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FELIPG" value="#{GestorDetallesGasto.sFELIPG}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COSIGA" value="COSIGA: " />
-												<p:inputText id="COSIGA" value="#{GestorDetallesActivo.sCOSIGA}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COSIGA" value="#{GestorDetallesGasto.sCOSIGA}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEEESI" value="FEEESI: " />
-												<p:inputText id="FEEESI" value="#{GestorDetallesActivo.sFEEESI}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEEESI" value="#{GestorDetallesGasto.sFEEESI}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEECOI" value="FEECOI: " />
-												<p:inputText id="FEECOI" value="#{GestorDetallesActivo.sFEECOI}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEECOI" value="#{GestorDetallesGasto.sFEECOI}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEEAUI" value="FEEAUI: " />
-												<p:inputText id="FEEAUI" value="#{GestorDetallesActivo.sFEEAUI}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEEAUI" value="#{GestorDetallesGasto.sFEEAUI}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEEPAI" value="FEEPAI: " />
-												<p:inputText id="FEEPAI" value="#{GestorDetallesActivo.sFEEPAI}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEEPAI" value="#{GestorDetallesGasto.sFEEPAI}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="IMNGAS" value="IMNGAS: " />
-												<p:inputText id="IMNGAS" value="#{GestorDetallesActivo.sIMNGAS}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="IMNGAS" value="#{GestorDetallesGasto.sIMNGAS}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="YCOS02" value="YCOS02: " />
-												<p:inputText id="YCOS02" value="#{GestorDetallesActivo.sYCOS02}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="YCOS02" value="#{GestorDetallesGasto.sYCOS02}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="IMRGAS" value="IMRGAS: " />
-												<p:inputText id="IMRGAS" value="#{GestorDetallesActivo.sIMRGAS}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="IMRGAS" value="#{GestorDetallesGasto.sIMRGAS}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="YCOS04" value="YCOS04: " />
-												<p:inputText id="YCOS04" value="#{GestorDetallesActivo.sYCOS04}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="YCOS04" value="#{GestorDetallesGasto.sYCOS04}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="IMDGAS" value="IMDGAS: " />
-												<p:inputText id="IMDGAS" value="#{GestorDetallesActivo.sIMDGAS}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="IMDGAS" value="#{GestorDetallesGasto.sIMDGAS}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="YCOS06" value="YCOS06: " />
-												<p:inputText id="YCOS06" value="#{GestorDetallesActivo.sYCOS06}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="YCOS06" value="#{GestorDetallesGasto.sYCOS06}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="IMCOST" value="IMCOST: " />
-												<p:inputText id="IMCOST" value="#{GestorDetallesActivo.sIMCOST}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="IMCOST" value="#{GestorDetallesGasto.sIMCOST}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="YCOS08" value="YCOS08: " />
-												<p:inputText id="YCOS08" value="#{GestorDetallesActivo.sYCOS08}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="YCOS08" value="#{GestorDetallesGasto.sYCOS08}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="IMOGAS" value="IMOGAS: " />
-												<p:inputText id="IMOGAS" value="#{GestorDetallesActivo.sIMOGAS}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="IMOGAS" value="#{GestorDetallesGasto.sIMOGAS}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="YCOS10" value="YCOS10: " />
-												<p:inputText id="YCOS10" value="#{GestorDetallesActivo.sYCOS10}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="YCOS10" value="#{GestorDetallesGasto.sYCOS10}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="IMDTGA" value="IMDTGA: " />
-												<p:inputText id="IMDTGA" value="#{GestorDetallesActivo.sIMDTGA}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="IMDTGA" value="#{GestorDetallesGasto.sIMDTGA}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COUNMO" value="COUNMO: " />
-												<p:inputText id="COUNMO" value="#{GestorDetallesActivo.sCOUNMO}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COUNMO" value="#{GestorDetallesGasto.sCOUNMO}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="IMIMGA" value="IMIMGA: " />
-												<p:inputText id="IMIMGA" value="#{GestorDetallesActivo.sIMIMGA}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="IMIMGA" value="#{GestorDetallesGasto.sIMIMGA}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COIMPT" value="COIMPT: " />
-												<p:inputText id="COIMPT" value="#{GestorDetallesActivo.sCOIMPT}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COIMPT" value="#{GestorDetallesGasto.sCOIMPT}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COTNEG" value="COTNEG: " />
-												<p:inputText id="COTNEG" value="#{GestorDetallesActivo.sCOTNEG}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COTNEG" value="#{GestorDetallesGasto.sCOTNEG}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COENCX" value="COENCX: " />
-												<p:inputText id="COENCX" value="#{GestorDetallesActivo.sCOENCX}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COENCX" value="#{GestorDetallesGasto.sCOENCX}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COOFCX" value="COOFCX: " />
-												<p:inputText id="COOFCX" value="#{GestorDetallesActivo.sCOOFCX}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COOFCX" value="#{GestorDetallesGasto.sCOOFCX}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="NUCONE" value="NUCONE: " />
-												<p:inputText id="NUCONE" value="#{GestorDetallesActivo.sNUCONE}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="NUCONE" value="#{GestorDetallesGasto.sNUCONE}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="NUPROF" value="NUPROF: " />
-												<p:inputText id="NUPROF" value="#{GestorDetallesActivo.sNUPROF}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="NUPROF" value="#{GestorDetallesGasto.sNUPROF}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEAGTO" value="FEAGTO: " />
-												<p:inputText id="FEAGTO" value="#{GestorDetallesActivo.sFEAGTO}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEAGTO" value="#{GestorDetallesGasto.sFEAGTO}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COMONA" value="COMONA: " />
-												<p:inputText id="COMONA" value="#{GestorDetallesActivo.sCOMONA}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COMONA" value="#{GestorDetallesGasto.sCOMONA}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="BIAUTO" value="BIAUTO: " />
-												<p:inputText id="BIAUTO" value="#{GestorDetallesActivo.sBIAUTO}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="BIAUTO" value="#{GestorDetallesGasto.sBIAUTO}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEAUFA" value="FEAUFA: " />
-												<p:inputText id="FEAUFA" value="#{GestorDetallesActivo.sFEAUFA}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEAUFA" value="#{GestorDetallesGasto.sFEAUFA}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COTERR" value="COTERR: " />
-												<p:inputText id="COTERR" value="#{GestorDetallesActivo.sCOTERR}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COTERR" value="#{GestorDetallesGasto.sCOTERR}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FMPAGN" value="FMPAGN: " />
-												<p:inputText id="FMPAGN" value="#{GestorDetallesActivo.sFMPAGN}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FMPAGN" value="#{GestorDetallesGasto.sFMPAGN}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEPGPR" value="FEPGPR: " />
-												<p:inputText id="FEPGPR" value="#{GestorDetallesActivo.sFEPGPR}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEPGPR" value="#{GestorDetallesGasto.sFEPGPR}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="FEAPLI" value="FEAPLI: " />
-												<p:inputText id="FEAPLI" value="#{GestorDetallesActivo.sFEAPLI}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="FEAPLI" value="#{GestorDetallesGasto.sFEAPLI}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COAPII" value="COAPII: " />
-												<p:inputText id="COAPII" value="#{GestorDetallesActivo.sCOAPII}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COAPII" value="#{GestorDetallesGasto.sCOAPII}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="COSPII" value="COSPII: " />
-												<p:inputText id="COSPII" value="#{GestorDetallesActivo.sCOSPII}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="COSPII" value="#{GestorDetallesGasto.sCOSPII}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 											<h:outputText for="NUCLII" value="NUCLII: " />
-												<p:inputText id="NUCLII" value="#{GestorDetallesActivo.sNUCLII}" size="18" maxlength="18" disabled="true">
+												<p:inputText id="NUCLII" value="#{GestorDetallesGasto.sNUCLII}" size="18" maxlength="18" disabled="true">
 												</p:inputText>
 
 										</h:panelGrid>
