--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -18,10 +18,10 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText value="IDPROV: " />
-											<p:inputText id="IDPROV" value="123456789" disabled="true" />
+											<p:inputText id="IDPROV" value="#{GestorDatosGenerales.sIDPROV}" disabled="true" />
 
 											<h:outputText value="COENGP: " />
-											<p:inputText id="COENGP" value="00000" disabled="true" />
+											<p:inputText id="COENGP" value="#{GestorDatosGenerales.sCOENGP}" disabled="true" />
 
 										</h:panelGrid>
 									</p:panel>
