--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -34,7 +34,7 @@
 							</p:submenu>
 							
 							<p:submenu label="Cuotas" icon="ui-icon-calculator">
-								<p:menuitem value="Cargar Cuotas"
+								<p:menuitem value="Cargar"
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
 									url="registracuota.xhtml" icon="ui-icon-arrowthick-1-e" />
@@ -56,7 +56,7 @@
 								<p:menuitem value="Registrar"
 									url="registraimpuesto.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
-									url="movimientosreferencias.xhtml" icon="ui-icon-document" />	
+									url="movimientosimpuestos.xhtml" icon="ui-icon-document" />	
 							</p:submenu>
 						</p:submenu>
 					</p:panelMenu>
