--- a/WebContent/registracuota.xhtml
+++ b/WebContent/registracuota.xhtml
@@ -18,17 +18,17 @@
 										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText value="IDPROV: " />
-											<p:inputText id="IDPROV" value="#{GestorDatosGenerales.sIDPROV}" disabled="true" />
+											<p:inputText id="IDPROV" value="#{GestorCuotas.sIDPROV}" disabled="true" />
 
 											<h:outputText value="COENGP: " />
-											<p:inputText id="COENGP" value="#{GestorDatosGenerales.sCOENGP}" disabled="true" />
+											<p:inputText id="COENGP" value="#{GestorCuotas.sCOENGP}" disabled="true" />
 
 										</h:panelGrid>
 									</p:panel>
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
 											<p:commandButton value="Limpiar Plantilla" update="panel" actionListener="#{GestorCuotas.limpiarPlantilla}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
-											<p:commandButton value="Alta Cuota" update="panel, popup, msgs" actionListener="#{GestorCuotas.registraMovimiento}"/>
+											<p:commandButton value="Alta" update="panel, popup, msgs" actionListener="#{GestorCuotas.realizaAlta}"/>
 										</h:panelGrid>
 									</p:fieldset>
 									<p:fieldset legend="Info">
@@ -59,7 +59,7 @@
 													<h:outputText for="COCLDO" value="Documento: " />
 													<p:selectOneMenu id="COCLDO" value="#{GestorCuotas.sCOCLDO}" required="true" requiredMessage="Falta el tipo de documento identificativo de la comunidad.">
 														<f:selectItem itemLabel="Elija..." itemValue="" />
-														<f:selectItems value="#{GestorCuotas.tiposdocumentoHM}" />
+														<f:selectItems value="#{GestorDatosGenerales.tiposcocldoHM}" />
 														<f:validateLength minimum="1" /> 
 													</p:selectOneMenu>
 													<p:message for="COCLDO" display="icon"/>
@@ -122,7 +122,7 @@
 													<h:outputText for="COSBAC" value="Concepto: " />
 													<p:selectOneMenu id="COSBAC" value="#{GestorCuotas.sCOSBAC}" >
 														<f:selectItem itemLabel="Elija..." itemValue="" />
-														<f:selectItems value="#{GestorCuotas.tipospagoHM}" />
+														<f:selectItems value="#{GestorDatosGenerales.tiposcosbga_t22HM}" />
 														<f:validateLength minimum="1" /> 
 													</p:selectOneMenu>
 													<p:message for="COSBAC" display="icon"/>
@@ -164,7 +164,7 @@
 													<h:outputText for="PTPAGO" value="Periodicidad: " />
 													<p:selectOneMenu id="PTPAGO" value="#{GestorCuotas.sPTPAGO}">
 														<f:selectItem itemLabel="Elija..." itemValue="" />
-														<f:selectItems value="#{GestorCuotas.tiposperiodicidadHM}" />
+														<f:selectItems value="#{GestorDatosGenerales.tiposptpagoHM}" />
 														<f:validateLength minimum="1" /> 
 													</p:selectOneMenu>
 													<p:message for="PTPAGO" display="icon"/>
