--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -27,8 +27,8 @@
 									</p:panel>
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
-											<p:commandButton value="Limpiar Plantilla" type="reset" />
-											<p:commandButton value="Alta Referencia" update="panel, msgs, popup" actionListener="#{GestorReferenciasCatastrales.registraMovimiento}" />
+											<p:commandButton value="Limpiar Plantilla" update="panel, msgs, popup" actionListener="#{GestorReferenciasCatastrales.limpiarPlantilla}"/>
+											<p:commandButton value="Alta" update="panel, msgs, popup" actionListener="#{GestorReferenciasCatastrales.realizaAlta}" />
 										</h:panelGrid>
 									</p:fieldset>
 									<p:fieldset legend="Info">
