--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -17,11 +17,11 @@
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 
+											<h:outputText value="CODTRN: " />
+											<p:inputText id="CODTRN" value="#{GestorReferenciasCatastrales.sCODTRN}" disabled="true" />
+
 											<h:outputText value="IDPROV: " />
 											<p:inputText id="IDPROV" value="#{GestorReferenciasCatastrales.sIDPROV}" disabled="true" />
-
-											<h:outputText value="COENGP: " />
-											<p:inputText id="COENGP" value="#{GestorReferenciasCatastrales.sCOENGP}" disabled="true" />
 
 										</h:panelGrid>
 									</p:panel>
