Modificacion del proceso de alta de comunidades y modificacion con busqueda de activo.

--- a/WebContent/gastos.xhtml
+++ b/WebContent/gastos.xhtml
@@ -26,27 +26,26 @@
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Identificador de activo especial: " />
-											<p:inputText id="COACES" value="#{TestPF.taxId}"
-												disabled="true" />
+											<p:inputText id="COACES" value="#{GestorGastos.sCOACES}" disabled="true" size="9" maxlength="9"/>
 
 											<h:outputText value="Numero de provision de fondos: " />
-											<p:inputText id="NUPROF" value="????" disabled="true" />
+											<p:inputText id="NUPROF" value="#{GestorGastos.sNUPROF}" disabled="true" size="9" maxlength="9"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha de entrada en la aplicacion: " />
-											<p:inputText id="FEAPLI" value="00000000" disabled="true" />
+											<p:inputText id="FEAPLI" value="#{GestorGastos.sFEAPLI}" disabled="true" size="8" maxlength="8"/>
 
 											<h:outputText value="Codigo de aplicacion INFOCAM: " />
-											<p:inputText id="COAPII" value="168" disabled="true" />
+											<p:inputText id="COAPII" value="#{GestorGastos.sCOAPII}" disabled="true" size="3" maxlength="3"/>
 
 											<h:outputText value="Codigo de subaplicacion INFOCAM: " />
-											<p:inputText id="COSPII" value="GA" disabled="true" />
+											<p:inputText id="COSPII" value="#{GestorGastos.sCOSPII}" disabled="true" size="2" maxlength="2"/>
 
 											<h:outputText
 												value="Numero de cliente para intercambio de ficheros: " />
-											<p:inputText id="NUCLII" value="" disabled="true" />
+											<p:inputText id="NUCLII" value="#{GestorGastos.sNUCLII}" disabled="true" size="13" maxlength="13"/>
 										</h:panelGrid>
 									</p:panel>
 
@@ -57,28 +56,28 @@
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Codigo de error: " />
-											<p:inputText id="COTERR" value="00" disabled="true" />
+											<p:inputText id="COTERR" value="#{GestorGastos.sCOTERR}" disabled="true" size="2" maxlength="2"/>
 
 											<h:outputText value="Indicador de autorizacion: " />
-											<p:inputText id="BIAUTO" value="" disabled="true" />
+											<p:inputText id="BIAUTO" value="#{GestorGastos.sBIAUTO}" disabled="true" size="1" maxlength="1"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha de anulacion del gasto: " />
-											<p:inputText id="FEAGTO" value="00000000" disabled="true" />
+											<p:inputText id="FEAGTO" value="#{GestorGastos.sFEAGTO}" disabled="true" size="8" maxlength="8"/>
 
 											<h:outputText value="Motivo de no autorizacion: " />
-											<p:inputText id="COMONA" value="" disabled="true" />
+											<p:inputText id="COMONA" value="#{GestorGastos.sCOMONA}" disabled="true" size="2" maxlength="2"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha de autorizacion del gasto: " />
-											<p:inputText id="FEAGTO" value="00000000" disabled="true" />
+											<p:inputText id="FEAUFA" value="#{GestorGastos.sFEAUFA}" disabled="true" size="8" maxlength="8"/>
 
 											<h:outputText value="Fecha del pago al proveedor: " />
-											<p:inputText id="FEAGTO" value="00000000" disabled="true" />
+											<p:inputText id="FEPGPR" value="#{GestorGastos.sFEPGPR}" disabled="true" size="8" maxlength="8"/>
 										</h:panelGrid>
 									</p:panel>
 								</h:panelGrid>
@@ -88,68 +87,70 @@
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Grupo de gasto: " />
-											<p:selectOneMenu id="COGRUG" value="#{TestPF.ssn}">
-												<f:selectItem itemLabel="Grupo" itemValue="" />
-												<f:selectItems value="#{TestPF.ssn}" />
+											<p:selectOneMenu id="COGRUG" value="#{GestorGastos.sCOGRUG}">
+												<f:selectItem itemLabel="Grupo..." itemValue="" />
+												<f:selectItems value="#{GestorDatosGenerales.tiposcogrugHM}" />
+													<p:ajax update="COTPGA, COSBGA" listener="#{GestorGastos.cambiaTipo}" />
 											</p:selectOneMenu>
 
 											<h:outputText value="Tipo de concepto de gasto:  " />
-											<p:selectOneMenu id="COTPGA" value="#{TestPF.ssn}">
-												<f:selectItem itemLabel="Tipo" itemValue="" />
-												<f:selectItems value="#{TestPF.ssn}" />
+											<p:selectOneMenu id="COTPGA" value="#{GestorGastos.sCOTPGA}">
+												<f:selectItem itemLabel="Tipo..." itemValue="" />
+												<f:selectItems value="#{GestorGastos.tiposcotpgaHM}" />
+												<p:ajax update="COSBGA" listener="#{GestorGastos.cambiaSubtipo}" />
 											</p:selectOneMenu>
 
 											<h:outputText value="Subtipo de gasto: " />
-											<p:selectOneMenu id="COSBGA" value="#{TestPF.ssn}">
-												<f:selectItem itemLabel="Subtipo" itemValue="" />
-												<f:selectItems value="#{TestPF.ssn}" />
+											<p:selectOneMenu id="COSBGA" value="#{GestorGastos.sCOSBGA}">
+												<f:selectItem itemLabel="Subtipo..." itemValue="" />
+												<f:selectItems value="#{GestorGastos.tiposcosbgaHM}" />
 											</p:selectOneMenu>
 
 											<h:outputText value="Periodicidad de pago: " />
-											<p:selectOneMenu id="PTPAGO" value="#{TestPF.ssn}">
+											<p:selectOneMenu id="PTPAGO" value="#{GestorGastos.sPTPAGO}">
 												<f:selectItem itemLabel="Periodicidad" itemValue="" />
-												<f:selectItems value="#{TestPF.ssn}" />
+												<f:selectItems value="#{GestorDatosGenerales.tiposptpagoHM}" />
 											</p:selectOneMenu>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha del devengo: " />
-											<p:inputMask value="#{TestPF.ssn}" mask="9999/99/99" />
+											<p:inputMask id="FEDEVE" value="#{GestorGastos.sFEDEVE}" mask="9999/99/99" size="8" maxlength="8"/>
 
 											<h:outputText value="Fecha de fin de periodo: " />
-											<p:inputMask value="#{TestPF.ssn}" mask="9999/99/99" />
+											<p:inputMask id="FFGTVP" value="#{GestorGastos.sFFGTVP}" mask="9999/99/99" size="8" maxlength="8"/>
 
 											<h:outputText value="Fecha del pago: " />
-											<p:inputMask value="#{TestPF.ssn}" mask="9999/99/99" />
+											<p:inputMask id="FEPAGA" value="#{GestorGastos.sFEPAGA}" mask="9999/99/99" size="8" maxlength="8"/>
 
 											<h:outputText value="Fecha limite del pago: " />
-											<p:inputMask value="#{TestPF.ssn}" mask="9999/99/99" />
+											<p:inputMask id="FELIPG" value="#{GestorGastos.sFELIPG}" mask="9999/99/99" size="8" maxlength="8"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Situacion del gasto: " />
-											<p:selectOneMenu id="COSIGA" value="#{TestPF.ssn}">
+											<p:selectOneMenu id="COSIGA" value="#{GestorGastos.sCOSIGA}">
 												<f:selectItem itemLabel="Situacion" itemValue="" />
-												<f:selectItems value="#{TestPF.ssn}" />
+												<f:selectItems value="#{GestorGastos.tiposcotpgaHM}" />
 											</p:selectOneMenu>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Fecha de estado estimado del importe: " />
-											<p:inputMask value="#{TestPF.ssn}" mask="9999/99/99" />
+											<p:inputMask id="FEEESI" value="#{GestorGastos.sFEEESI}" mask="9999/99/99" size="8" maxlength="8"/>
 
 											<h:outputText value="Fecha de estado conocido del importe: " />
-											<p:inputMask value="#{TestPF.ssn}" mask="9999/99/99" />
+											<p:inputMask id="FEECOI" value="#{GestorGastos.sFEECOI}" mask="9999/99/99" size="8" maxlength="8"/>
 
 											<h:outputText
 												value="Fecha de estado autoriazado del importe: " />
-											<p:inputMask value="#{TestPF.ssn}" mask="9999/99/99" />
+											<p:inputMask id="FEEAUI" value="#{GestorGastos.sFEEAUI}" mask="9999/99/99" size="8" maxlength="8"/>
 
 											<h:outputText value="Fecha de estado pagado del importe: " />
-											<p:inputMask value="#{TestPF.ssn}" mask="9999/99/99" />
+											<p:inputMask id="FEEPAI" value="#{GestorGastos.sFEEPAI}" mask="9999/99/99" size="8" maxlength="8"/>
 										</h:panelGrid>
 									</p:panel>
 									<p:panel>
@@ -159,42 +160,42 @@
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{TestPF.ssn}" mask="999999.99" />
+											<p:inputMask id="IMNGAS" value="#{GestorGastos.sIMNGAS}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Recargo en el importe del gasto: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{TestPF.ssn}" mask="999999.99" />
+											<p:inputMask id="IMRGAS" value="#{GestorGastos.sIMRGAS}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de demora del gasto: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{TestPF.ssn}" mask="999999.99" />
+											<p:inputMask id="IMDGAS" value="#{GestorGastos.sIMDGAS}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de costas: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{TestPF.ssn}" mask="999999.99" />
+											<p:inputMask id="IMCOST" value="#{GestorGastos.sIMCOST}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de otros incrementos: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{TestPF.ssn}" mask="999999.99" />
+											<p:inputMask id="IMOGAS" value="#{GestorGastos.sIMOGAS}" mask="999999.99" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de descuento de gastos: " />
 											<h:outputText value="-" />
 											<p:selectManyCheckbox value="#{formBean.selectedOptions}">
 												<f:selectItem itemLabel="" itemValue="-" />
 											</p:selectManyCheckbox>
-											<p:inputMask value="#{TestPF.ssn}" mask="999999.99" />
+											<p:inputMask id="IMDTGA" value="#{GestorGastos.sIMDTGA}" mask="999999.99" size="5" maxlength="5"/>
 
 										</h:panelGrid>
 									</p:panel>
@@ -202,21 +203,21 @@
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Codigo de unidad monetaria: " />
-											<p:inputText id="COUNMO" value="268" disabled="true" />
+											<p:inputText id="COUNMO" value="#{GestorGastos.sCOUNMO}" disabled="true" size="5" maxlength="5"/>
 
 											<h:outputText value="Importe de impuestos del gasto: " />
-											<p:inputMask value="#{TestPF.date}" mask="99/99/9999" />
+											<p:inputMask id="IMIMGA" value="#{GestorGastos.sIMIMGA}" mask="99/99/9999" size="5" maxlength="5"/>
 
 											<h:outputText value="Tipo de impuesto: " />
-											<p:selectOneMenu id="COIMPT" value="#{TestPF.ssn}">
+											<p:selectOneMenu id="COIMPT" value="#{GestorGastos.sCOIMPT}">
 												<f:selectItem itemLabel="Tipo" itemValue="" />
-												<f:selectItems value="#{TestPF.ssn}" />
+												<f:selectItems value="#{GestorGastos.tiposcotpgaHM}" />
 											</p:selectOneMenu>
 
 											<h:outputText value="Tipo de Negociado: " />
-											<p:selectOneMenu id="COTNEG" value="#{TestPF.ssn}">
+											<p:selectOneMenu id="COTNEG" value="#{GestorGastos.sCOTNEG}">
 												<f:selectItem itemLabel="A cargo de..." itemValue="" />
-												<f:selectItems value="#{TestPF.ssn}" />
+												<f:selectItems value="#{GestorGastos.tiposcotpgaHM}" />
 											</p:selectOneMenu>
 										</h:panelGrid>
 									</p:panel>
@@ -224,54 +225,23 @@
 									<p:fieldset legend="Conexion">
 										<h:panelGrid columns="2" cellpadding="5">
 											<h:outputText value="Codigo de entidad: " />
-											<p:inputMask value="#{TestPF.date}" mask="99/99/9999" />
+											<p:inputMask id="COENCX" value="#{GestorGastos.sCOENCX}" mask="99/99/9999" size="5" maxlength="5"/>
 
 											<h:outputText value="Oficina de emision: " />
-											<p:inputMask value="#{TestPF.phone}" mask="(999) 999-9999" />
+											<p:inputMask id="COOFCX" value="#{GestorGastos.sCOOFCX}" mask="(999) 999-9999" size="5" maxlength="5"/>
 
 											<h:outputText value="Numero de conexion: " />
-											<p:inputMask value="#{TestPF.phoneExt}"
-												mask="(999) 999-9999? x99999" />
+											<p:inputMask id="NUCONE" value="#{GestorGastos.sNUCONE}" mask="(999) 999-9999? x99999" size="5" maxlength="5"/>
 
 											<h:outputText value="Fecha del pago por conexion: " />
-											<p:inputMask value="#{TestPF.date}" mask="99/99/9999" />
+											<p:inputMask id="FMPAGN" value="#{GestorGastos.sFMPAGN}" mask="99/99/9999" size="5" maxlength="5"/>
 										</h:panelGrid>
 									</p:fieldset>
-
-
-
 								</h:panelGrid>
 							</p:fieldset>
 						</h:panelGrid>
 					</p:panel>
-					<p:commandButton value="Reset" type="reset" />
-					<p:commandButton value="Submit" update="display"
-						oncomplete="dlg.show()" />
 
-
-					<p:dialog widgetVar="dlg" modal="true">
-						<h:panelGrid id="display" columns="2" cellpadding="5">
-
-							<h:outputText value="Date: " />
-							<h:outputText value="#{TestPF.date}" />
-
-							<h:outputText value="Phone: " />
-							<h:outputText value="#{TestPF.phone}" />
-
-							<h:outputText value="Phone with Ext: " />
-							<h:outputText value="#{TestPF.phoneExt}" />
-
-							<h:outputText value="taxId: " />
-							<h:outputText value="#{TestPF.taxId}" />
-
-							<h:outputText value="SSN: " />
-							<h:outputText value="#{TestPF.ssn}" />
-
-							<h:outputText value="Product Key: " />
-							<h:outputText value="#{TestPF.productKey}" />
-
-						</h:panelGrid>
-					</p:dialog>
 				</p:layoutUnit>
 			</p:layout>
 		</h:form>
