--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -84,7 +84,7 @@
 																paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
 																rowsPerPageTemplate="5,10,15">  
 														<f:facet name="header">  
-															Activos
+															Gastos
 														</f:facet>
 															
 														<p:column sortBy="#{activo.COACES}" headerText="Codigo Activo">  
