revisados codigos retorno impuestos

--- a/WebContent/movimientosimpuestos.xhtml
+++ b/WebContent/movimientosimpuestos.xhtml
@@ -129,7 +129,7 @@
 											<p:message for="BIRESO" display="icon"/>
 
 											<h:outputText for="COTEXA" value="COTEXA: " />
-											<p:inputText id="COTEXA" value="#{GestorMovimientosImpuestosRecursos.sCOTEXA}" size="10" maxlength="10">
+											<p:inputText id="COTEXA" value="#{GestorMovimientosImpuestosRecursos.sCOTEXA}" size="10" maxlength="10" disabled="true">
 											</p:inputText>
 
 										</h:panelGrid>
